<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.10</version>
    <relativePath/>
    <!-- lookup parent from repository -->
  </parent>

  <groupId>com.activeviam.apps</groupId>
  <artifactId>aao-sandbox</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <description>Ashot's sandbox app</description>

  <properties>
    <java.version>21</java.version>
    <spring-boot.version>3.2.10</spring-boot.version>
    <activepivot.version>6.1.1</activepivot.version>
    <springdoc.version>2.3.0</springdoc.version>

    <opentelemetry-instrumentation.version>2.9.0</opentelemetry-instrumentation.version>
    <!-- Align the OTEL version to the one brought by OTEL instrumention -->
    <opentelemetry.version>1.43.0</opentelemetry.version>

    <spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
    <palantir-java-format.version>2.50.0</palantir-java-format.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.opentelemetry.instrumentation</groupId>
        <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
        <version>${opentelemetry-instrumentation.version}-alpha</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Spring Boot -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- OpenTelemetry -->
    <!--
    <dependency>
      <groupId>io.opentelemetry.instrumentation</groupId>
      <artifactId>opentelemetry-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>io.opentelemetry.instrumentation</groupId>
      <artifactId>opentelemetry-logback-mdc-1.0</artifactId>
    </dependency>
    -->

    <!-- ActiveViam Starters -->
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>excel-addin-starter</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-server-apm-starter</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-server-starter</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-ui-starter</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.springboot</groupId>
      <artifactId>atoti-admin-ui-starter</artifactId>
      <version>${activepivot.version}</version>
    </dependency>

    <!-- Content Server persistence -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-hikaricp</artifactId>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!-- Swagger -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>${springdoc.version}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.activeviam</groupId>
      <artifactId>atoti-server-test</artifactId>
      <version>${activepivot.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <finalName>atoti-spring-boot-template</finalName>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
        <configuration>
          <!-- limit format enforcement to just the files changed by this feature branch -->

          <!--ratchetFrom>origin/6.1</ratchetFrom-->
          <!-- define a language-specific format -->
          <java>
            <palantirJavaFormat>
              <version>${palantir-java-format.version}</version>
            </palantirJavaFormat>

            <importOrder>
              <!-- or a custom ordering -->
              <order>\\#,java,javax,org,com,com.diffplug,</order>
              <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
              <!-- you can use an empty string for all the imports you didn't specify explicitly, and '\\#` prefix for static imports. -->
            </importOrder>

            <removeUnusedImports/>
            <licenseHeader>
              <file>./.idea/copyright/spotless.license</file>
            </licenseHeader>
          </java>
          <pom>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>**/pom.xml</include>
            </includes>
            <sortPom>
              <!-- has its own section below -->
              <expandEmptyElements>false</expandEmptyElements>
            </sortPom>
          </pom>
          <markdown>
            <includes>
              <!-- You have to set the target manually -->
              <include>**/*.md</include>
            </includes>
            <flexmark/>
            <!-- has its own section below -->
          </markdown>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <version>${spring-boot.version}</version>
            </path>
          </annotationProcessorPaths>
          <!-- https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
          <parameters>true</parameters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
